kubeconfig/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      components: postgres
  template:
    metadata:
      labels:
        components: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.0
          resources:
            limits:
              memory: "500Mi"
              cpu: "300m"
          ports:
            - containerPort: 5432
