kubeconfig/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-app-clusterip
spec:
  type: ClusterIP
  selector:
    components: frontend
  ports:
  - port: 80
    protocol: TCP
