kubeconfig/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-app-clusterip
spec:
  type: ClusterIP
  selector:
    components: postgres
  ports:
  - port: 5432
    protocol: TCP
